--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -1,74 +1,19 @@
-name: Run Cypress Tests
+name: Cypress Tests
 
 on:
-  schedule:
-    - cron: "0 5 * * *"
   push:
     branches:
       - main
 
 jobs:
-  test:
+  cypress-tests:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
       - name: Install dependencies
         run: npm install
 
-      - name: Run Cypress tests and generate report
-        id: cypress-test
-        run: |
-          # Run Cypress tests and store results in a temporary directory
-          mkdir -p cypress/temp_results
-
-          # Run Cypress tests with Cypress Dashboard and video recording enabled
-          npm run cy:run -- --record --key d459d4bb-f948-4824-9ee1-0ad4ff054194 --reporter junit --reporter-options "mochaFile=cypress/temp_results/report.xml"
-
-          # Display the test results for debugging purposes
-          cat cypress/temp_results/report.xml
-
-          # Check the Cypress exit code and store the result in a variable
-          exit_code=$?
-
-          # Fail the job if the Cypress tests failed
-          if [ $exit_code -ne 0 ]; then
-            echo "Cypress tests failed. See the test report for details."
-            exit $exit_code
-          fi
-
-      - name: Archive test results
-        uses: actions/upload-artifact@v2
-        with:
-          name: cypress-test-results
-          path: cypress/temp_results
-
-      - name: Run Cypress tests and save screenshots
-        run: |
-          # Run Cypress tests and save screenshots in the "screenshots" directory
-          mkdir -p cypress/screenshots
-          npm run cy:run -- --env screenshotOnRun=true
-
-      - name: Archive Cypress screenshots
-        uses: actions/upload-artifact@v2
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-
-      - name: Install mailx
-        run: sudo apt-get update && sudo apt-get install -y mailutils
-
-      - name: Send Test Report Email
-        env:
-          REPORT_EMAIL: ${{ secrets.TEST_REPORT_VIA_EMAIL }} # Email of the other person
-          YOUR_EMAIL: d.yaroslav.grodas@gmail.com # Your email address
-        run: |
-          # Send the email with the test report using mailx, including the test results as attachments
-          echo "Please find the test report and Cypress screenshots attached." | mailx -s "Cypress Test Report" -a cypress/temp_results/report.xml -a cypress/screenshots -r d.yaroslav.grodas@gmail.com $REPORT_EMAIL $YOUR_EMAIL
+      - name: Run Cypress tests
+        run: npm run cy:run
