--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Cache Cypress binary
+      - name: Cache dependencies
         uses: actions/cache@v2
         with:
-          path: ~/.cache/Cypress
+          path: |
+            ~/.npm
+            ~/.cache/Cypress
+            node_modules
           key: ${{ runner.os }}-cypress-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
         run: npm install
-
-      - name: Install Cypress
-        run: npx cypress install
 
       - name: Run Cypress tests
         run: npm run cy:run
