--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -20,11 +20,18 @@ jobs:
         with:
           node-version: 14
 
+      - name: Install Cypress and Cache Binary
+        run: |
+          # Clear the existing Cypress binary cache to ensure the latest version is installed
+          npx cypress cache clear
+
+          # Install Cypress and cache the binary
+          npx cypress install
+        env:
+          CI: true
+
       - name: Install dependencies
         run: npm install
-
-      - name: Install Cypress
-        run: npx cypress install
 
       - name: Run Cypress tests and generate report
         id: cypress-test
