--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -28,6 +28,8 @@ jobs:
             ~/.cache/Cypress
             node_modules
           key: ${{ runner.os }}-cypress-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cypress-
 
       - name: Install Cypress
         run: npx cypress install
