--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-cypress-
 
       - name: Install Cypress
-        run: npx cypress install
+        run: npm install cypress
 
       - name: Install dependencies
         run: npm install
